--- a/doc/source/algorithms/index.ipynb
+++ b/doc/source/algorithms/index.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "## Algorithms\n",
     "\n",
-    "In our framework different algorithms can be used. Even though compared to other frameworks the number of algorithms might seem to be small, but they are highly customizable and can be easily extended."
+    "In our framework, different algorithms can be used. Compared to other frameworks, the number of algorithms might seem small, but they are highly customizable and can be easily extended."
    ]
   },
   {
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each of them is implemented in a class which can be used directly and the constructor takes parameter of the algorithm."
+    "Each of the algorithms is implemented in a class that can be used directly by calling the constructor passing the corresponding parameters."
    ]
   },
   {
@@ -109,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
