--- a/doc/source/algorithms/pso.ipynb
+++ b/doc/source/algorithms/pso.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Particle Swarm Optimization was proposed 1995 by Kennedy and Eberhart <cite data-cite=\"pso\"></cite> based on the simulating of social behavior. The algorithm uses a *swarm* of particles to guide its search. Each particle has a velocity and is influenced by locally and globally best found solutions. Many different implementations have been proposed in the past and, therefore, it is quite difficult to refer to THE correct implementation of PSO. However, the general concepts shall be explained in the following.\n",
+    "Particle Swarm Optimization was proposed in 1995 by Kennedy and Eberhart <cite data-cite=\"pso\"></cite> based on the simulating of social behavior. The algorithm uses a *swarm* of particles to guide its search. Each particle has a velocity and is influenced by locally and globally best-found solutions. Many different implementations have been proposed in the past and, therefore, it is quite difficult to refer to THE correct implementation of PSO. However, the general concepts shall be explained in the following.\n",
     "\n",
     "Given the following variables:\n",
     "\n",
@@ -80,23 +80,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The social behavior is incorporated by using the *globally* (or locally) best found solution in the swarm for the velocity update. Besides the social behavior, the cognitive behavior of the swarm is determined by the particle's *personal* best solution found.\n",
-    "The cognitive and social components need to be well balanced to ensure the algorithm is performing well on a variety of optimization problems.\n",
+    "The social behavior is incorporated by using the *globally* (or locally) best-found solution in the swarm for the velocity update. Besides the social behavior, the swarm's cognitive behavior is determined by the particle's *personal* best solution found.\n",
+    "The cognitive and social components need to be well balanced to ensure that the algorithm performs well on a variety of optimization problems.\n",
     "Thus, some effort has been made to determine suitable values for $c_1$ and $c_2$. In **pymoo** both values are updated as proposed in <cite data-cite=\"pso_adapative\"></cite>. Our implementation deviates in some implementation details (e.g. fuzzy state change) but follows the general principles proposed in the paper. "
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Assuming you have our third party library `pyrecorder` installed you can create an animation for a two-dimensional problem easily. Below we provide the code to observe the behavior of the swarm. We have reduced to set the maximum velocity to `max_velocity_rate=0.025` for illustration purposes. Otherwise, the algorithm converges even quicker to the global optimum of the `Ackley` function with two variables."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best solution found: \n",
+      "X = [-2.50626029e-07 -8.03655907e-09]\n",
+      "F = [7.09243484e-07]\n"
+     ]
+    }
+   ],
    "source": [
     "from pymoo.algorithms.so_pso import PSO, PSOAnimation\n",
     "from pymoo.factory import Ackley\n",
@@ -104,16 +107,22 @@
     "\n",
     "problem = Ackley()\n",
     "\n",
-    "algorithm = PSO(max_velocity_rate=0.025)\n",
+    "algorithm = PSO()\n",
     "\n",
     "res = minimize(problem,\n",
     "               algorithm,\n",
-    "               callback=PSOAnimation(fname=\"pso.mp4\"),\n",
     "               seed=1,\n",
     "               save_history=True,\n",
     "               verbose=False)\n",
     "\n",
     "print(\"Best solution found: \\nX = %s\\nF = %s\" % (res.X, res.F))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assuming you have our third-party library `pyrecorder` installed you can create an animation for a two-dimensional problem easily. Below we provide the code to observe the behavior of the swarm. We have reduced to set the maximum velocity to `max_velocity_rate=0.025` for illustration purposes. Otherwise, the algorithm converges even quicker to the global optimum of the `Ackley` function with two variables."
    ]
   },
   {
