--- a/doc/source/customization/custom.ipynb
+++ b/doc/source/customization/custom.ipynb
@@ -69,14 +69,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The problem definition above define a problem with just one variable. This variable can be considered as a complex object which is in our case a string. The same principle can be used to use other data structure such as trees or lists with variable lengths. Because both objectives have to be maximized, we are minimizing their negative values."
+    "The problem definition above defines a problem with just one variable. This variable can be considered a complex object, which is, in our case, a string. The same principle can be used to use other data structures such as trees or lists with variable lengths. Because both objectives have to be maximized, we are minimizing their negative values."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To solve the problem the evolutionary operators sampling, crossover, mutation and duplication check needs to be implemented.\n",
+    "To solve the optimization problem, evolutionary operators sampling, crossover, mutation, and duplication, check needs to be implemented.\n",
     "Each of the modules will be shown in the following."
    ]
   },
@@ -86,7 +86,7 @@
    "source": [
     "### Sampling\n",
     "\n",
-    "Our sampling method just generates a random string which is equivalent of choosing a random letter from the alphabet (only lower case).\n",
+    "Our sampling method just generates a random string, which is equivalent to choosing a random letter from the alphabet (only lower case).\n",
     "Because of the implementation of having only one variable, we return a matrix with the shape (n,1)."
    ]
   },
@@ -120,8 +120,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The crossover operator combines parents to create offsprings. In our framework the crossover operator retrieves the input already with predefined matings. \n",
-    "Our crossover randomly picks a character from the first or from the second parent."
+    "The crossover operator combines parents to create offsprings. In our framework, the crossover operator retrieves the input already with predefined matings. \n",
+    "Our crossover randomly picks a character from the first or the second parent."
    ]
   },
   {
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The mutation needs to be implemented for our string object as well. We either change the order of the string (40%), randomly pick a new character with a given probability (40%) or leave the string unmodified (20%). "
+    "The mutation needs to be implemented for our string object as well. We either change the order of the string (40%), randomly pick a new character with a given probability (40%), or leave the string unmodified (20%). "
    ]
   },
   {
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Moreover, do not underestimate the importance of filtering out duplicates during the evolution. This helps to make sure a mating produces an offspring that does not already exist in the current population. If it does another mating process is triggered until unique individual do exist."
+    "Moreover, do not underestimate the importance of filtering out duplicates during evolution. Duplicate elimination helps to make sure a mating produces an offspring that does not already exist in the current population. If it does, another mating process is triggered until unique individuals do exist."
    ]
   },
   {
@@ -338,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
