--- a/doc/source/customization/initialization.ipynb
+++ b/doc/source/customization/initialization.ipynb
@@ -22,9 +22,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One way of customizing an algorithm is a biased initial population. This can be very helpful if expert knowledge already exists and known solutions should be improved. In the following two different ways of initialization are provided: **a)** just providing the design space of the variables and **b)** a `Population` object where the objectives and constraints are provided and are not needed to be calculated again.\n",
+    "One way of customizing an algorithm is a biased initial population. This can be very helpful if expert knowledge already exists, and known solutions should be improved. In the following, two different ways of initialization are provided: **a)** just providing the design space of the variables and **b)** a `Population` object where the objectives and constraints are provided and are not needed to be calculated again.\n",
     "\n",
-    "**NOTE:** This works with all **population-based** algorithms in *pymoo*. Technically speaking all algorithms which inherit from `GeneticAlgorithm`. For **local-search** based algorithm the initial solution can be provided by setting `x0` instead of `sampling`."
+    "**NOTE:** This works with all **population-based** algorithms in *pymoo*. Technically speaking, all algorithms which inherit from `GeneticAlgorithm`. For **local-search** based algorithm, the initial solution can be provided by setting `x0` instead of `sampling`."
    ]
   },
   {
@@ -119,13 +119,7 @@
       "    5 |     400 |  2.711423416 |  2.924067547 |  0.00000E+00\n",
       "    6 |     500 |  2.543371942 |  2.907522469 |  0.00000E+00\n",
       "    7 |     600 |  2.149343130 |  2.622581124 |  0.00000E+00\n",
-      "    8 |     700 |  1.872917882 |  2.375802009 |  0.00000E+00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    8 |     700 |  1.872917882 |  2.375802009 |  0.00000E+00\n",
       "    9 |     800 |  1.872917882 |  2.298050294 |  0.00000E+00\n",
       "   10 |     900 |  1.842035658 |  2.195838663 |  0.00000E+00\n"
      ]
@@ -183,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
