--- a/doc/source/customization/permutation.ipynb
+++ b/doc/source/customization/permutation.ipynb
@@ -22,9 +22,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Permutations are a very special type where each integer value occurs only once. Your algorithm to solve your optimization problem efficiently might need some customization regarding the evolutionary operators. \n",
+    "Permutations are a very particular type where each integer value occurs only once. Your algorithm to solve your optimization problem efficiently might need some customization regarding the evolutionary operators. \n",
     "\n",
-    "In the following, two examples for permutation problems shall be provided."
+    "In the following, two examples of permutation problems shall be provided."
    ]
   },
   {
@@ -38,8 +38,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The traditional traveling salesman problems aims to minimize the time to travel to visit each city exactly once. \n",
-    "Since a permutation can start with an arbitrary number it is advisable to avoid oranges with apples and to repair each individual to start with the index `0`. Therefore, let us define a `Repair` operator as follows: "
+    "The traditional traveling salesman problem aims to minimize the time to travel to visit each city exactly once. \n",
+    "Since a permutation can start with an arbitrary number, it is advisable to avoid oranges with apples and to repair each individual to start with the index `0`. Therefore, let us define a `Repair` operator as follows: "
    ]
   },
   {
@@ -70,8 +70,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the permutations the corresponding operators need to be supplied to the `GA` constructor. Here, we choose random permutations, edge recombination crossover and inversion mutation. Also, the repair defined above is provided.\n",
-    "The termination is defined to consider the improvement of the last 200 generations. If the improvement is above a tolerance value (default: `f_tol=1e-6`) the algorithm is considered as terminated."
+    "For permutations, the corresponding operators need to be supplied to the `GA` constructor. Here, we choose random permutations, edge recombination crossover, and inversion mutation. Also, the repair defined above is provided.\n",
+    "The termination is defined to consider the improvement of the last 200 generations. If the improvement is above a tolerance value (default: `f_tol=1e-6`), the algorithm is considered as terminated."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This problem is purely optimization the permutations and the initial value is not of importance."
+    "This problem is purely optimizing the permutations, and the initial value is not of importance."
    ]
   },
   {
