--- a/doc/source/customization/subset_selection.ipynb
+++ b/doc/source/customization/subset_selection.ipynb
@@ -15,9 +15,9 @@
    "source": [
     "## Subset Selection Problem\n",
     "\n",
-    "A genetic algorithm can be used to approach subset selection problems by defining custom operators. In general a metaheuristic algorithm might not be the ultimate goal to implement in a real-world scenario, however, it might be useful to investigate patterns or characteristics of possible good subsets. \n",
-    "Let us consider a simple toy problem where we have to select numbers from a list. For every solution exactly 10 numbers have to be selected that their sum is minimized.\n",
-    "For subset selection problem a binary encoding can be used where 1 indicates a number is picked. In our problem formulation the list of numbers is represented by $L$ and the binary encoded variable by $x$."
+    "A genetic algorithm can be used to approach subset selection problems by defining custom operators. In general, a metaheuristic algorithm might not be the ultimate goal to implement in a real-world scenario; however, it might be useful to investigate patterns or characteristics of possible well-performing subsets. \n",
+    "Let us consider a simple toy problem where we have to select numbers from a list. For every solution, exactly ten numbers have to be selected that their sum is minimized.\n",
+    "For the subset selection problem, a binary encoding can be used where **one** indicates a number is picked. In our problem formulation, the list of numbers is represented by $L$ and the binary encoded variable by $x$."
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As shown above, the equality constraint is handled by making sure $g(x)$ can only be zero if exactly 10 numbers are chosen.\n",
+    "As shown above, the equality constraint is handled by ensuring $g(x)$ can only be zero if exactly ten numbers are chosen.\n",
     "The problem can be implemented as follows:"
    ]
   },
@@ -75,9 +75,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The customization requires to write custom operators in order to solve this problem efficiently. We recommend to consider the feasibility directly in the evolutionary operators, because otherwise most of the time infeasible solutions will be processed.\n",
-    "The sampling creates randomly solution where the subset constraint will always be satisfied. \n",
-    "The mutation randomly removes a number and chooses another one. The crossover, first takes the common numbers of both parents and then randomly picks either from the first or from the second parent until enough numbers are picked."
+    "The customization requires writing custom operators in order to solve this problem efficiently. We recommend considering the feasibility directly in the evolutionary operators because otherwise, most of the time, infeasible solutions will be processed.\n",
+    "The sampling creates a random solution where the subset constraint will always be satisfied. \n",
+    "The mutation randomly removes a number and chooses another one. The crossover takes the values of both parents and then randomly picks either the one from the first or from the second parent until enough numbers are picked."
    ]
   },
   {
@@ -168,13 +168,7 @@
       "    7 |     700 |  0.00000E+00 |  0.00000E+00 |          118 |  1.70050E+02\n",
       "    8 |     800 |  0.00000E+00 |  0.00000E+00 |           85 |  1.49630E+02\n",
       "    9 |     900 |  0.00000E+00 |  0.00000E+00 |           85 |  1.39550E+02\n",
-      "   10 |    1000 |  0.00000E+00 |  0.00000E+00 |           85 |  1.30580E+02\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "   10 |    1000 |  0.00000E+00 |  0.00000E+00 |           85 |  1.30580E+02\n",
       "   11 |    1100 |  0.00000E+00 |  0.00000E+00 |           74 |  1.19930E+02\n",
       "   12 |    1200 |  0.00000E+00 |  0.00000E+00 |           74 |  1.11800E+02\n",
       "   13 |    1300 |  0.00000E+00 |  0.00000E+00 |           74 |  1.06050E+02\n",
@@ -184,13 +178,7 @@
       "   17 |    1700 |  0.00000E+00 |  0.00000E+00 |           50 |  8.45100E+01\n",
       "   18 |    1800 |  0.00000E+00 |  0.00000E+00 |           50 |  8.09000E+01\n",
       "   19 |    1900 |  0.00000E+00 |  0.00000E+00 |           50 |  7.66900E+01\n",
-      "   20 |    2000 |  0.00000E+00 |  0.00000E+00 |           50 |  7.33700E+01\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "   20 |    2000 |  0.00000E+00 |  0.00000E+00 |           50 |  7.33700E+01\n",
       "   21 |    2100 |  0.00000E+00 |  0.00000E+00 |           45 |  7.00100E+01\n",
       "   22 |    2200 |  0.00000E+00 |  0.00000E+00 |           45 |  6.78900E+01\n",
       "   23 |    2300 |  0.00000E+00 |  0.00000E+00 |           45 |  6.60300E+01\n",
@@ -200,13 +188,7 @@
       "   27 |    2700 |  0.00000E+00 |  0.00000E+00 |           45 |  6.03300E+01\n",
       "   28 |    2800 |  0.00000E+00 |  0.00000E+00 |           43 |  5.94900E+01\n",
       "   29 |    2900 |  0.00000E+00 |  0.00000E+00 |           43 |  5.76600E+01\n",
-      "   30 |    3000 |  0.00000E+00 |  0.00000E+00 |           43 |  5.65100E+01\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "   30 |    3000 |  0.00000E+00 |  0.00000E+00 |           43 |  5.65100E+01\n",
       "   31 |    3100 |  0.00000E+00 |  0.00000E+00 |           42 |  5.54700E+01\n",
       "   32 |    3200 |  0.00000E+00 |  0.00000E+00 |           42 |  5.42800E+01\n",
       "   33 |    3300 |  0.00000E+00 |  0.00000E+00 |           42 |  5.36700E+01\n",
@@ -217,13 +199,7 @@
       "   38 |    3800 |  0.00000E+00 |  0.00000E+00 |           39 |  5.10500E+01\n",
       "   39 |    3900 |  0.00000E+00 |  0.00000E+00 |           39 |  5.08500E+01\n",
       "   40 |    4000 |  0.00000E+00 |  0.00000E+00 |           39 |  5.05500E+01\n",
-      "   41 |    4100 |  0.00000E+00 |  0.00000E+00 |           39 |  5.01200E+01\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "   41 |    4100 |  0.00000E+00 |  0.00000E+00 |           39 |  5.01200E+01\n",
       "   42 |    4200 |  0.00000E+00 |  0.00000E+00 |           39 |  4.93800E+01\n",
       "   43 |    4300 |  0.00000E+00 |  0.00000E+00 |           39 |  4.88000E+01\n",
       "   44 |    4400 |  0.00000E+00 |  0.00000E+00 |           39 |  4.85700E+01\n",
@@ -233,13 +209,7 @@
       "   48 |    4800 |  0.00000E+00 |  0.00000E+00 |           37 |  4.66100E+01\n",
       "   49 |    4900 |  0.00000E+00 |  0.00000E+00 |           37 |  4.62700E+01\n",
       "   50 |    5000 |  0.00000E+00 |  0.00000E+00 |           37 |  4.62000E+01\n",
-      "   51 |    5100 |  0.00000E+00 |  0.00000E+00 |           37 |  4.57600E+01\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "   51 |    5100 |  0.00000E+00 |  0.00000E+00 |           37 |  4.57600E+01\n",
       "   52 |    5200 |  0.00000E+00 |  0.00000E+00 |           37 |  4.56000E+01\n",
       "   53 |    5300 |  0.00000E+00 |  0.00000E+00 |           37 |  4.53400E+01\n",
       "   54 |    5400 |  0.00000E+00 |  0.00000E+00 |           36 |  4.49200E+01\n",
@@ -319,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
