--- a/doc/source/decision_making/index.ipynb
+++ b/doc/source/decision_making/index.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The focus of pymoo is on optimization methods itself. However, some rudimentary decision making methods are available:"
+    "The focus of pymoo is on optimization methods itself. However, some basic decision making methods are available:"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use any scalarization method and use it for the purpose of post-processing. Let us assume our algorithm has converged to the pareto-front:"
+    "We can use any scalarization method and use it for post-processing. Let us assume our algorithm has converged to the Pareto-front:"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, we initalize weights and our decomposition function:"
+    "Then, we initialize weights and our decomposition function:"
    ]
   },
   {
@@ -374,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
