--- a/doc/source/interface/callback.ipynb
+++ b/doc/source/interface/callback.ipynb
@@ -21,10 +21,10 @@
    "metadata": {},
    "source": [
     "A `Callback` class can be used to receive a notification of the algorithm object each generation.\n",
-    "This can be useful to keep track of metrics, do additional calculations or even modify the algorithm object during the run.\n",
-    "The latter is only recommend for experienced users.\n",
+    "This can be useful to track metrics, do additional calculations, or even modify the algorithm object during the run.\n",
+    "The latter is only recommended for experienced users.\n",
     "\n",
-    "For instance, to keep track of the best solution each generation:"
+    "For instance, to keep track of the best solution in each generation:"
    ]
   },
   {
@@ -122,8 +122,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the analysis of the run should be done during post-processing the option `save_history` can be used as well. If a callback is used the history does not need to be saved.\n",
-    "By using the history object the same as above can be achieved by using the stored information during the run:"
+    "If the run's analysis should be done during post-processing, the option `save_history` can be used as well. If a callback is used, history does not need to be saved.\n",
+    "With the `history` object, the same as above can be achieved by using the stored information during the run:"
    ]
   },
   {
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the `save_history` is true a deep copy of the algorithm object takes place each generation. Please note that this can be quite expensive and might not be desired for all runs. However, it provides great post-processing options because all data can be accessed respectively."
+    "If the `save_history` is set true, a deep copy of the algorithm object takes place in each generation. Please note that this can be quite expensive and might not be desired for all runs. However, it provides excellent post-processing options because all data can be accessed, respectively."
    ]
   }
  ],
