--- a/doc/source/interface/display.ipynb
+++ b/doc/source/interface/display.ipynb
@@ -20,8 +20,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An algorithm prints by default some information each generation. However, this might be desired to be modified.\n",
-    "To do that a `Display` object can be passed to the `minimize` function (or also to the `Algorithm` constructor) to override the default behavior.\n",
+    "The `minimize` functions prints by default some information each generation. However, this might be desired to be modified.\n",
+    "A `Display` object can be passed to the `minimize` function (or also to the `Algorithm` constructor) to override the default behavior.\n",
     "\n",
     "For instance:"
    ]
@@ -86,9 +86,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To just add some printouts of an algorithm you can inherit your own custom display `MyDisplay` from the algorithm's default `Display` object.\n",
-    "Whereas some algorithms have already a custom implementation for printing purposes, others just use the default single or multi-objective behavior.\n",
-    "For instance, to keep the default output of NSGA2 and simply add the metrics shown above, `MyDisplay` has to inherit from `MultiObjectiveDisplay` and the calling the `super()._do(problem, evaluator, algorithm)` will add the default output."
+    "To add some printouts of an algorithm, you inherit your custom display object`MyDisplay` from the algorithm's default `Display` object.\n",
+    "Whereas some algorithms already have a custom implementation for printing purposes, others just use the default single or multi-objective behavior.\n",
+    "For instance, to keep the default output of NSGA2 and simply add the metrics shown above, `MyDisplay` has to inherit from `MultiObjectiveDisplay` and then calling the `super()._do(problem, evaluator, algorithm)` will add the default output."
    ]
   }
  ],
@@ -108,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
