--- a/doc/source/interface/minimize.ipynb
+++ b/doc/source/interface/minimize.ipynb
@@ -46,15 +46,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "- `problem`: A [Problem](../problems/index.ipynb)  object that contains the problem to be solved.\n",
     "- `algorithm`: An [Algorithm](../algorithms/index.ipynb) objective which represents the algorithm to be used.\n",
-    "- `termination`: A [Termination](termination.ipynb) object or a tuple which defines when the algorithm has terminated. If not provided a default termination criterion will be used. Purposefully, we list the *termination* as a parameter and not an option. Specific algorithms might need some refinement of the termination to work reliably. \n",
-    "- `seed`: Most algorithms underly some randomness. Setting the *seed* to a positive integer value ensure reproducible results. If not provided a random seed will be set automatically and the used integer will be stored in the [Result](result.ipynb) object.\n",
-    "- `verbose`: Boolean value defining whether output should be printed during the run or not.\n",
+    "- `termination`: A [Termination](termination.ipynb) object or a tuple defining when the algorithm has terminated. If not provided, a default termination criterion will be used. Purposefully, we list the *termination* as a parameter and not an option. Specific algorithms might need some refinement of the termination to work reliably. \n",
+    "- `seed`: Most algorithms underly some randomness. Setting the *seed* to a positive integer value ensures reproducible results. If not provided, a random seed will be set automatically, and the used integer will be stored in the [Result](result.ipynb) object.\n",
+    "- `verbose`: Boolean value defining whether the output should be printed during the run or not.\n",
     "- `display`: You can overwrite what output is supposed to be printed in each iteration. Therefore, a custom [Display](display.ipynb) object can be used for customization purposes. \n",
-    "- `save_history`: Boolean value representing whether a snapshot of the algorithm should be stored in each iteration. If enabled, the [Result](result.ipynb) object contains the history.\n",
-    "- `return_least_infeasible`: Whether if the algorithm can not find a feasible solution the least infeasible solution should be returned. By default False."
+    "- `save_history`: A boolean value representing whether a snapshot of the algorithm should be stored in each iteration. If enabled, the [Result](result.ipynb) object contains the history.\n",
+    "- `return_least_infeasible`: Whether if the algorithm can not find a feasible solution, the least infeasible solution should be returned. By default `False`."
    ]
   },
   {
@@ -62,8 +61,7 @@
    "metadata": {},
    "source": [
     "Note, the `minimize` function creates a deep copy of the algorithm object before the run.\n",
-    "This ensures that two independent runs with the same algorithm and same random seed have the same results without any side effects. However, to access algorithm's internals you can access the object being used by `res.algorithm` where `res` is an instance of the [Result](result.ipynb) object.\n",
-    "\n"
+    "This ensures that two independent runs with the same algorithm and same random seed have the same results without any side effects. However, to access the algorithm's internals, you can access the object being used by `res.algorithm` where `res` is an instance of the [Result](result.ipynb) object."
    ]
   },
   {
@@ -99,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
