--- a/doc/source/interface/result.ipynb
+++ b/doc/source/interface/result.ipynb
@@ -46,8 +46,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "After an algorithm has been executed, a result object is returned. In the following, single- and multi-objective runs with and without constraints are shown, and the corresponding `Result` object is explained:\n",
+    "\n",
     "In this single-objective optimization problem, there exists a single best solution that was found. \n",
-    "The result contains directly the best found values in the corresponding spaces. \n",
+    "The result directly contains the best-found values in the corresponding spaces. \n",
     "\n",
     "- `res.X` design space values are \n",
     "- `res.F` objective spaces values\n",
@@ -58,12 +60,8 @@
     "- `res.history` history of algorithm object. (only if `save_history` has been enabled during the algorithm initialization)\n",
     "- `res.time` the time required to run the algorithm\n",
     "\n",
-    "Note, when the `minimize` function is called a deep copy of the algorithm object is created.\n",
-    "This ensures that two independent runs with the same algorithm and same random seed have the same results without any side effects.\n",
-    "\n",
-    "The values from the final population can be extracted by using the `get` method. \n",
-    "The population object is used internally, and store information for each individual. The `get`\n",
-    "method allows to return vectors or matrices based on the provided properties.\n"
+    "Note that when the `minimize` function is called, a deep copy of the algorithm object is created.\n",
+    "This ensures that two independent runs with the same algorithm and same random seed have the same results without any side effects."
    ]
   },
   {
@@ -120,9 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The values from the final population can be extracted by using the `get` method. \n",
-    "The population object is used internally, and store information for each individual. The `get`\n",
-    "method allows to return vectors or matrices based on the provided properties."
+    "The values from the final population can be extracted by using the `get` method. The population object is used internally and store information for each individual. The `get` method allows returning vectors or matrices based on the provided properties."
    ]
   },
   {
@@ -163,8 +159,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this run, the problem did not have any constraints and therefore `res.G` evaluated to `None`.\n",
-    "Also note, that `res.CV` will always be set to 0 no matter if the problem has constraints or not."
+    "In this run, the problem did not have any constraints, and `res.G` evaluated to `None`.\n",
+    "Also, note that `res.CV` will always be set to `0`, no matter if the problem has constraints or not."
    ]
   },
   {
@@ -228,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, the algorithm was not able to find any feasible solution in 5 generations. Therefore, all values contained in the results are equals to `None`. If in this case the least feasible solution should be returned, the flag `return_least_infeasible` needs to be enabled:"
+    "Here, the algorithm was not able to find any feasible solution in 5 generations. Therefore, all values contained in the results are equals to `None`. If the least feasible solution should be returned when no feasible solution was found, the flag `return_least_infeasible` can be enabled:"
    ]
   },
   {
@@ -293,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the problem has multiple objective, the result object has the same structure but `res.X`, `res.F`, `res.G`, `res.CV` are a set \n",
+    "If the problem has multiple objectives, the result object has the same structure but `res.X`, `res.F`, `res .G`, `res.CV` is a set \n",
     "of non-dominated solutions instead of a single one."
    ]
   },
@@ -360,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
