--- a/doc/source/misc/checkpoint.ipynb
+++ b/doc/source/misc/checkpoint.ipynb
@@ -101,6 +101,7 @@
     "               checkpoint,\n",
     "               ('n_gen', 20),\n",
     "               seed=1,\n",
+    "               copy_algorithm=False,\n",
     "               verbose=True)"
    ]
   },
@@ -120,13 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1\n",
       "2\n",
       "3\n",
       "4\n",
@@ -254,20 +249,8 @@
       "===========================================================================\n",
       "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     fopt     |     favg    \n",
       "===========================================================================\n",
-      "    1 |       0 |  2.081623241 |  4.477105114 |            - |            -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    2 |     100 |  0.00000E+00 |  0.348655365 | -3.92561E+00 | -1.04428E+00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    1 |       0 |  2.081623241 |  4.477105114 |            - |            -\n",
+      "    2 |     100 |  0.00000E+00 |  0.348655365 | -3.92561E+00 | -1.04428E+00\n",
       "    3 |     200 |  0.00000E+00 |  0.00000E+00 | -4.29306E+00 | -1.54877E+00\n",
       "    4 |     300 |  0.00000E+00 |  0.00000E+00 | -4.29306E+00 | -2.39171E+00\n",
       "    5 |     400 |  0.00000E+00 |  0.00000E+00 | -4.36020E+00 | -3.12053E+00\n",
@@ -310,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
