--- a/doc/source/misc/constraint_handling.ipynb
+++ b/doc/source/misc/constraint_handling.ipynb
@@ -20,9 +20,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Constraint handling is often neglected in frameworks but is indeed a very important aspect of optimization.\n",
-    "Depending on the characteristics of the constraints one method might be more suitable and lead to better results than another.\n",
-    "In principle, two ways exist how constraints can be dealt with: a) use an algorithm which is able to handle constraints internally; b) redefine the problem to have no constraints but still guarantee the optimum to be a feasible solutions. \n",
+    "Constraint handling is often neglected in frameworks but is indeed an essential aspect of optimization.\n",
+    "Depending on the characteristics of the constraints, one method might be more suitable and lead to better results than another.\n",
+    "In principle, two ways exist how constraints can be dealt with: a) use an algorithm that can handle constraints internally; b) redefine the problem to have no constraints but still guarantee the optimum to be a feasible solution. \n",
     "Both strategies will be elaborated in the following."
    ]
   },
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default the returned optimum is **always** required to be feasible. In some situations it might be required to obtain the **least infeasible** solution if no feasible could have been found. To enable this behavior you can pass `return_least_infeasible=True` to the `minimize` function. "
+    "By default, the returned optimum is **always** required to be feasible. It might be required to obtain the **least infeasible** solution if no feasible could have been found in some situations. To enable this behavior, you can pass `return_least_infeasible=True` to the `minimize` function. "
    ]
   },
   {
@@ -73,10 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In my inequality constraints are always defined as \"$\\leq 0$\" constraints. Thus, constraint violation is defined as follows: A solution is considered as **feasible** of all constraint violations are **less than** zero. A solution is considered as **infeasible** if at least one constraint violation is **larger than** zero. \n",
-    "\n",
-    "\n",
-    "For instance, the constraint "
+    "In pymoo, inequality constraints are always defined as \"$\\leq 0$\" constraints. Thus, constraint violation is defined as follows: A solution is considered as **feasible** of all constraint violations are **less than** zero. A solution is considered as **infeasible** if at least one constraint violation is **larger than** zero. "
    ]
   },
   {
@@ -129,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The figure below shows the corresponding function and the optimum to be found. The constraint function is shown with a dashed line where greater than zero (violated) and with a solid line where less or equal to zero (satisfied). The optimum is shown by a red cross which is minimum in the feasible region."
+    "The figure below shows the corresponding function and the optimum to be found. The constraint function is shown with a dashed line greater than zero (violated) and with a solid line where less or equal to zero (satisfied). The optimum is shown by a red cross, which is minimum in the feasible region."
    ]
   },
   {
@@ -277,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We got a couple of questions of how equality constraints should be handled in a genetic algorithm. In general, functions without any smoothness are challenging to handle for genetic algorithms. An equality constraint is basically an extreme case, where the constraint violation is 0 at exactly one point and otherwise 1. \n",
+    "We got a couple of questions about how equality constraints should be handled in a genetic algorithm. In general, functions without any smoothness are challenging to handle for genetic algorithms. An equality constraint is an extreme case, where the constraint violation is 0 at precisely one point and otherwise 1. \n",
     "\n",
     "Let us consider the following constraint $g(x)$ where $x$ represents a variable:"
    ]
@@ -321,14 +318,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, all of constraints above are very strict and make **most of the search space infeasible**. Without providing more information to the algorithm those constraint are very difficult to satisfy."
+    "However, all of the constraints above are very strict and make **most search space infeasible**. Without providing more information to the algorithm, those constraints are challenging to satisfy."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this reason, the constraint can be smoothed by adding an epsilon to it and, therefore, having two inequality constraints:"
+    "Thus, the constraint can be smoothed by adding an epsilon to it and, therefore, having two inequality constraints:"
    ]
   },
   {
@@ -356,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Depending on the $\\epsilon$ the solutions will be more or less close to the desired value. However, the genetic algorithm does not know anything about the problem itself which makes it difficult to handle and focus the search in the infeasible space."
+    "Depending on the $\\epsilon$, the solutions will be more or less close to the desired value. However, the genetic algorithm does not know anything about the problem itself, making it challenging to handle and focus the search in the infeasible space."
    ]
   },
   {
@@ -370,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the default constraint handling approach in **pymoo**. It strictly prefers feasible over infeasible solutions. "
+    "Parameter-less constraint handling is the default constraint handling approach in **pymoo**. It strictly prefers feasible over infeasible solutions. "
    ]
   },
   {
@@ -411,7 +408,7 @@
    "metadata": {},
    "source": [
     "This approach works well if an algorithm is based on comparisons. For instance, a genetic algorithm has to determine what individuals survive. Thus, this mapping can be utilized to create a rank for each individual. \n",
-    "If the $f_\\max$ of the function is known beforehand this can also be used for redefining the problem beforehand. \n",
+    "If the $f_\\max$ of the function is known beforehand, it can also be used to redefine the problem beforehand. \n",
     "Redefining the problem is very similar to the approach discussed next."
    ]
   },
@@ -426,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this approach internally equality constraints are converted to inequality constraints. Then, the violation of inequality and equality constraints penalize the objective value. This makes all non-constrained algorithms applicable, however, also might create a more difficult fitness landscape to solve. "
+    "The penalty-based constraint handling approach internally converts equality constraints to inequality constraints. Then, the violation of inequality and equality constraints penalize the objective value. This makes all non-constrained algorithms applicable; however, it also might create a more difficult fitness landscape to solve. "
    ]
   },
   {
@@ -682,7 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A simple approach is to handle constraints through a repair function. This is only possible if the equation of the constraint is known. The repair makes sure every solution that is evaluated is in fact feasible. Let us consider the following example where \n",
+    "A simple approach is to handle constraints through a repair function. This is only possible if the equation of the constraint is known. The repair makes sure every solution that is evaluated is, in fact, feasible. Let us consider the following example where \n",
     "the equality constraints need to consider more than one variable:"
    ]
   },
@@ -742,8 +739,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you might have noticed the problem has similar characteristics to problem in our getting started. \n",
-    "Before a solution is evaluated a repair function is called. To make sure a solution is feasible, an approach would be to either set $x_3 = 2 - x_1$ or $x_1 = 2 - x_3$. Additionally, we need to consider that this repair might produce a variable to be out of bounds."
+    "As you might have noticed, the problem has similar characteristics to the problem in our getting started. \n",
+    "Before a solution is evaluated, a repair function is called. To make sure a solution is feasible, an approach would be to either set $x_3 = 2 - x_1$ or $x_1 = 2 - x_3$. Additionally, we need to consider that this repair might produce a variable to be out of bounds."
    ]
   },
   {
@@ -977,7 +974,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here in fact the $\\epsilon$ term is necessary to find any feasible solution at all."
+    "Here, in fact, the $\\epsilon$ term is necessary to find any feasible solution at all."
    ]
   }
  ],
@@ -997,7 +994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
