--- a/doc/source/misc/convergence.ipynb
+++ b/doc/source/misc/convergence.ipynb
@@ -20,10 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is fundamentally important to keep track of the convergence of an algorithm. This shows the improvement over time which is important to evaluate how good the algorithm performance or what algorithms performs better. In *pymoo* different ways of tracking the performance exist.\n",
-    "One is to store the whole algorithms run using the `save_history` flag and extract the necessary information for post processing. Since the history includes a deep clone this can become memory intensive if many iterations are run. An alternative is to use a `Callback` object to just store the information needed and use them later on for plotting.\n",
-    "Both ways are explained in the following for an unconstrained single-objective problem. \n",
-    "Please bear in mind if your problem has constraints or more than one objective this needs to be addressed in the convergence curve (for instance via plotting the `CV` too or using multi-objective optimization performance metrics)."
+    "It is fundamentally important to keep track of the convergence of an algorithm. Convergence graphs visualize the improvement over time, which is vital to evaluate how good the algorithm performance or what algorithms perform better. In pymoo different ways of tracking the performance exists. One is to store the whole algorithms run using the `save_history` flag and extract the necessary information for post-processing. Since history includes a deep copy, this can become memory intensive if many iterations are run. An alternative is to use a `Callback` object to just store the information needed and use them later on for plotting. Both ways are explained in the following for an unconstrained single-objective problem. Please bear in mind if your optimization problem has constraints or more than one objective, this needs to be addressed in the convergence curve (for instance, via plotting the `CV`, too, or using multi-objective optimization performance metrics). "
    ]
   },
   {
@@ -91,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This might be even more data than necessary and, therefore, not always the most memory efficient method to use. However, if the number of generations is only a few hundreds and the `problem` and `algorithm` objects do not contain large amount of data this shall be not a big deal. Using the history we can extract the number of function evaluations and the optimum stored in the algorithm object at each generation/iteration. The `algorithm` object has the attribute `opt` (type is a Population object) which contains the current optimum. For single-objective algorithms this is known to be only a **single** solution."
+    "This might be even more data than necessary and, therefore, not always the most memory-efficient method to use. However, if the number of generations is only a few hundred and the `problem` and `algorithm` objects do not contain a large amount of data, this shall be not a big deal. Using the history, we can extract the number of function evaluations and the optimum stored in the algorithm object at each generation/iteration. The `algorithm` object has the attribute `opt` (a `Population` object), which contains the current optimum. For single-objective algorithms, this is known to be only a **single** solution."
    ]
   },
   {
@@ -140,8 +137,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another way is to define a `Callback` object which stores the information necessary to plot the convergence.\n",
-    "Make sure to pass the object to the `minimize` function in order to get the notifications each iteration of the algorithm."
+    "Another way is to define a `Callback` object, which stores the information necessary to plot the convergence.\n",
+    "Make sure to pass the object to the `minimize` function to get the notifications each iteration of the algorithm."
    ]
   },
   {
@@ -231,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
