--- a/doc/source/misc/decomposition.ipynb
+++ b/doc/source/misc/decomposition.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "Also, multi-objective problems can be decomposed using a scalarization function.\n",
-    "In the following the contour lines of different methods are shown.\n",
+    "In the following, the contour lines of different methods are shown.\n",
     "\n",
     "Let us first make the necessary imports and define the points in the design space:"
    ]
@@ -407,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
