--- a/doc/source/misc/index.ipynb
+++ b/doc/source/misc/index.ipynb
@@ -38,6 +38,7 @@
     "   convergence.ipynb\n",
     "   decomposition.ipynb\n",
     "   kktpm.ipynb\n",
+    "   checkpoint.ipynb\n",
     "   \n",
     "   "
    ]
@@ -64,10 +65,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
