--- a/doc/source/operators/crossover.ipynb
+++ b/doc/source/operators/crossover.ipynb
@@ -51,11 +51,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As arguments the probability of a crossover and the *eta* parameter can be provided.\n",
+    "As arguments, the probability of a crossover and the *eta* parameter can be provided.\n",
     "\n",
-    "In the example below we demonstrate a crossover in an optimization problem with only one variable. A crossover is performed between two points, *0.2* and *0.8*, and the resulting exponential distribution is visualized. Depending on the *eta_cross* the exponential distribution can be fine tuned.\n",
+    "In the example below, we demonstrate a crossover in an optimization problem with only one variable. A crossover is performed between two points, *0.2* and *0.8*, and the resulting exponential distribution is visualized. Depending on the *eta_cross*, the exponential distribution can be fine-tuned.\n",
     "\n",
-    "The probability of SBX follows an exponential distribution. Please note for demonstration purpose, we have set *prob_per_variable=1.0* which means every variable participates in the crossover (necessary because here exists only one variable). However, it is suggested to perform a crossover of two variables form each parent with a probability of *0.5* which is defined by default if not defined otherwise."
+    "The probability of SBX follows an exponential distribution. Please note for demonstration purposes, we have set *prob_per_variable=1.0*, which means every variable participates in the crossover (necessary because there exists only one variable). However, it is suggested to perform a crossover of two variables forms each parent with a probability of *0.5*, which is defined by default if not defined otherwise."
    ]
   },
   {
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also, it can be used for integer variables. The bounds are slightly modified and after doing the crossover the variables are rounded."
+    "Also, it can be used for integer variables. The bounds are slightly modified, and after doing the crossover, the variables are rounded."
    ]
   },
   {
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The point crossover is mostly applied to binary optimization problems. But in general in can be used for other variable representations. \n",
+    "The point crossover is mostly applied to binary optimization problems. However, in general, it can be used for other variable representations. \n",
     "\n",
     "The point crossover can be initiated by"
    ]
@@ -205,8 +205,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For any number of points that are desired. Additionally, for the purpose of convenience the \n",
-    "single- or two point crossover are created by"
+    "For any number of points that are desired. Additionally, for convenience the \n",
+    "single- or two-point crossover is created by"
    ]
   },
   {
@@ -368,7 +368,7 @@
    "metadata": {},
    "source": [
     "The uniform crossover takes with a probability of 0.5 the values from each parent. \n",
-    "In contrast to a point crossover not a sequence of variables is taken, but random indices."
+    "In contrast to a point crossover, not a sequence of variables is taken, but random indices."
    ]
   },
   {
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The half uniform crossover will first find out what indices are different in first and the second parent. Then, it will take half of the difference to be selected from the other parent."
+    "The half uniform crossover will first determine what indices are different in the first and the second parent. Then, it will take half of the difference to be selected from the other parent."
    ]
   },
   {
@@ -499,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The exponential crossover is mostly a one point crossover, but occasionally it can be a two point crossover. \n",
+    "The exponential crossover is mostly a one-point crossover, but occasionally it can be a two-point crossover. \n",
     "First, randomly a starting index is chosen. Then, we add the next variable to be mutated with a specific probability. If we reach the last variable, we continue with the first (wrap around)."
    ]
   },
@@ -568,7 +568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following the different creating of donor vectors is shown. The difference between $x_{\\pi_2} - x_{\\pi_3}$ is added with different weights $F \\in (0, 1)$ to $x_{\\pi_1}$. The resulting donor solution can be used for further evolutionary recombinations (for example DE uses it for another crossover)."
+    "In the following, the different creating of donor vectors is shown. The difference between $x_{\\pi_2} - x_{\\pi_3}$ is added with different weights $F \\in (0, 1)$ to $x_{\\pi_1}$. The resulting donor solution can be used for further evolutionary recombinations (for example, DE uses it for another crossover)."
    ]
   },
   {
@@ -655,9 +655,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
