--- a/doc/source/operators/repair.ipynb
+++ b/doc/source/operators/repair.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "## Repair Operator\n",
     "\n",
-    "The repair operator is mostly problem dependent. Most commonly it is used to make sure the algorithm is only searching in the feasible space. It is applied after the offsprings have been reproduced. In the following, we are using the knapsack problem to demonstrate the repair operator in *pymoo*.\n",
-    "\n"
+    "The repair operator is mostly problem-dependent. Most commonly, it is used to make sure the algorithm is only searching in the feasible space. It is applied after the offsprings have been reproduced. In the following, we are using the knapsack problem to demonstrate the repair operator in *pymoo*.\n"
    ]
   },
   {
@@ -86,8 +85,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "Because the constraint $\\sum_{j=1}^m z_j \\, w_j \\leq Q$ is fairly easy to satisfy. Therefore, we can make sure before evaluating the objective function, that this constraint is not violated by repairing the individual.\n",
-    "A repair class has to be defined and the population are given as input. The repaired population has to be returned."
+    "Because the constraint $\\sum_{j=1}^m z_j \\, w_j \\leq Q$ is fairly easy to satisfy. Therefore, we can make sure that this constraint is not violated by repairing the individual before evaluating the objective function.\n",
+    "A repair class has to be defined, and the population is given as input. The repaired population has to be returned."
    ]
   },
   {
@@ -151,13 +150,7 @@
       "    1 |     200 |  1.28000E+02 |  5.00570E+02 |            - |            -\n",
       "    2 |     400 |  9.80000E+01 |  3.56070E+02 |            - |            -\n",
       "    3 |     600 |  0.00000E+00 |  2.59780E+02 |         -291 | -2.91000E+02\n",
-      "    4 |     800 |  0.00000E+00 |  1.82020E+02 |         -425 | -3.36400E+02\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "    4 |     800 |  0.00000E+00 |  1.82020E+02 |         -425 | -3.36400E+02\n",
       "    5 |    1000 |  0.00000E+00 |  1.19465E+02 |         -454 | -3.35556E+02\n",
       "    6 |    1200 |  0.00000E+00 |  6.68000E+01 |         -454 | -2.95400E+02\n",
       "    7 |    1400 |  0.00000E+00 |  2.88800E+01 |         -454 | -2.90133E+02\n",
@@ -180,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As it can be seen, the repair operator makes sure no infeasible solution is evaluated. Even though this example seems to be quite easy, the repair operator makes especially sense for more complex constraints where domain specific knowledge is known."
+    "As demonstrated, the repair operator makes sure no infeasible solution is evaluated. Even though this example seems to be quite easy, the repair operator makes especially sense for more complex constraints where domain-specific knowledge is known."
    ]
   }
  ],
@@ -200,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
