--- a/doc/source/operators/selection.ipynb
+++ b/doc/source/operators/selection.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "## Selection\n",
     "\n",
-    "This modules defines the mating selection during the execution of a genetic algorithm. In the beginning of the mating process parents need to be selected to be mated using the crossover operation.\n"
+    "This module defines the mating selection during the execution of a genetic algorithm. At the beginning of the mating, process parents need to be selected to be mated using the crossover operation.\n",
+    "\n"
    ]
   },
   {
@@ -55,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we pick randomly solutions from the current population to be used for recombination. The implementation uses a permutation to avoid repetitive individuals. For instance, let us consider the case where only two parents are desired to be selected: The permutation (5,2,3,4,1,0), will lead to the parent seleciton of (5,2), (3,4), (1,0), where no parent can participate twice for mating."
+    "Here, we randomly pick solutions from the current population to be used for recombination. The implementation uses a permutation to avoid repetitive individuals. For instance, let us consider the case where only two parents are desired to be selected: The permutation (5,2,3,4,1,0), will lead to the parent selection of (5,2), (3,4), (1,0), where no parent can participate twice for mating."
    ]
   },
   {
@@ -95,10 +96,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It has been shown that a tournament pressure is helpful for the purpose of faster convergence. This implementation provides the functionality to define a tournament selection very generic. \n",
+    "It has been shown that tournament pressure is helpful for faster convergence. This implementation provides the functionality to define a tournament selection very generic. \n",
     "Below we show a binary tournament selection (two individuals are participating in each competition).\n",
     "\n",
-    "Having defined the number of participants the winner need to be written to an output array. here, we use the fitness values (if constraints should be considered CV should be added as well) to achieve that."
+    "Having defined the number of participants, the winner needs to be written to an output array. Here, we use the fitness values (if constraints should be considered, CV should be added as well) to achieve that."
    ]
   },
   {
@@ -203,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
