--- a/doc/source/visualization/heatmap.ipynb
+++ b/doc/source/visualization/heatmap.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For getting in idea of the distribution of values heatmaps can be used.\n",
+    "For getting an idea of the distribution of values, heatmaps can be used.\n",
     "\n",
     "Let us visualize some test data:"
    ]
@@ -64,7 +64,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "By default, larger values are represent with wight and smaller values with the corresponding color:"
+    "By default, larger values are represented with wight and smaller values with the corresponding color:"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This behavior can be changed by setting reverse to False."
+    "This behavior can be changed by setting `reverse` to False."
    ]
   },
   {
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plot can be further customized by supplying a title, labels, and by using the plotting directives from matplotlib. Also, the colors can be changed:"
+    "The plot can be further customized by supplying a title, labels, and by using the plotting directives from matplotlib. Also, colors can be changed:"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Moreover, the values can be sorted lexicographically by objective(s) - default the selected objective is insert in position 0 of the range of objectives. Also, the boundaries can be changed. Otherwise, it is scaled according to the smallest and largest values supplied."
+    "Moreover, the values can be sorted lexicographically by objective(s) - and by default, the selected objective is inserted in position 0 of the range of objectives. Also, boundaries can be changed. Otherwise, it is scaled according to the smallest and largest values supplied."
    ]
   },
   {
@@ -213,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
