--- a/doc/source/visualization/petal.ipynb
+++ b/doc/source/visualization/petal.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A simple Petal Width can be created by:"
+    "A simple petal plot can be created by:"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you prefer to visualize smaller values with a larger area, set reverse to true:"
+    "If you prefer to visualize smaller values with a larger area, set `reverse=True`:"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
