--- a/doc/source/visualization/radar.ipynb
+++ b/doc/source/visualization/radar.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us produce some data first:"
+    "Let us start generating some data:"
    ]
   },
   {
@@ -56,8 +56,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the values should not be normalized, then we can plot the ideal and nadir point in addition.\n",
-    "This keeps the absolute values of each objective. The outer shape represents the nadir point, the inner area the ideal point. All points will lie in the area spanned by those two points."
+    "If the values should not be normalized, then we can plot the ideal and nadir point.\n",
+    "This keeps the absolute values of each objective. The outer shape represents the nadir point, the inner area the ideal point. All points will lie in the area spanned by those two points additionally."
    ]
   },
   {
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But if the scale of the objective is too different, then normalization is recommended. Then, the ideal point is just the point in the middle and the nadir point is now symmetric."
+    "But if the scale of the objective is too different, then normalization is recommended. Then, the ideal point is just the point in the middle, and the nadir point is now symmetric."
    ]
   },
   {
@@ -198,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
