--- a/doc/source/visualization/star.ipynb
+++ b/doc/source/visualization/star.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Star Coordinate Plot maps a higher dimensional space with a non-linear function to two dimensions. Compared to Radviz points can be outside of the circle.\n",
+    "Star Coordinate Plot maps a higher dimensional space with a non-linear function to two dimensions. Compared to Radviz, points can be outside of the circle.\n",
     "\n",
     "Let us visualize some test data:"
    ]
@@ -65,7 +65,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The plot can be further customized by supplying a title, labels, and by using the plotting directives from matplotlib. "
+    "The plot can be further customized by supplying a `title`, `label`, and by using other plotting directives from matplotlib. "
    ]
   },
   {
@@ -138,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
