--- a/doc/source/visualization/video.ipynb
+++ b/doc/source/visualization/video.ipynb
@@ -20,28 +20,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Images are great, but since optimization happens over time video are able to capture the optimization process itself often in a better way.\n",
-    "In `pymoo` we offer a wrapper around `matplotlib` to combine heterogeneous plots and and put them together in a video (a different way than the animation package does it). This is, however, more computationally expensive, but makes recording very simple."
+    "Images are fantastic, but since optimization happens over time, videos can capture the optimization process itself often in a better way.\n",
+    "In `pymoo` we offer a wrapper around `matplotlib` to combine complex plots and put them together in a video (a different way than the animation package does it). This is, however, more computationally expensive, but makes recording very simple."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To enable video support you have to install `pyrecorder` by\n",
+    "To enable video support, you have to install `pyrecorder` by\n",
     "\n",
     "```\n",
     "pip install -U pyrecorder\n",
     "```\n",
     "\n",
-    "Because our recording tool has some dependencies not every regular `pymoo` user would be interest in, we have decided to outsource the recording to another third-party library."
+    "Because our recording tool has some dependencies, not every regular `pymoo` user would be interested in, we have decided to outsource the recording to another third-party library."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For instance, let us record a very short video with only three frames (randomly created scatter plots):"
+    "For instance, let us record a short video with only three frames (randomly created scatter plots):"
    ]
   },
   {
@@ -118,8 +118,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To stream the the current algorithm state directly to the screen the callback directive can be used to initiate a video by `Video(Streamer())`.\n",
-    "This will allow to stream the current status of the algorithm."
+    "The callback directive can be used to initiate a video by `Video(Streamer())` to stream the current algorithm state directly to the screen.\n",
+    "This allows the streaming of the current status of the algorithm."
    ]
   },
   {
@@ -193,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
