--- a/doc/source/contributions.ipynb
+++ b/doc/source/contributions.ipynb
@@ -11,31 +11,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our framework is from the community to the community of multi-objective optimization. We would be more than glad if some collaborations and contributions would be happening in the near future. \n",
+    "Our framework is from the community to the community of multi-objective optimization. We would be more than glad if some collaborations and contributions would be happening shortly. \n",
     "\n",
-    "Some topics that are in our opinion interesting to incorporate in the future:"
+    "Some topics that are, in our opinion, interesting to incorporate in the future:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **New features:** For instance new test problems, algorithms, or any other multi-objective related implementation.\n",
+    "- **New features:** For instance, new test problems, algorithms, or any other multi-objective related implementation.\n",
     "\n",
-    "- **Termination Criteria:** We have implemented rudimentary 'x_tol' and 'f_tol' termination criteria. However, a study needs to be made if those are suitable for test and/or for real-world problems. Also, what default parameter settings are suitable.\n",
+    "- **Termination Criteria:** We have implemented rudimentary 'x_tol' and 'f_tol' termination criteria. However, a study needs to be made if those are suitable for test and real-world problems. Also, what default parameter settings are suitable.\n",
     "\n",
-    "- **Constraint Handling:** So far mostly parameter-less constraint handling is used. Many different strategies of handling constraints have been studied and the some state of the art methods should be provided in *pymoo* as well.\n",
+    "- **Constraint Handling:** So far, mostly parameter-less constraint handling is used. Many different strategies of handling constraints have been studied, and some state of the art methods should be provided in *pymoo* as well.\n",
     "\n",
-    "- **Interactive Visualization:** Our framework provides static visualization for the objective space in higher dimensions. However, it would be nice to make it possible to interactively explore solutions. A good choice would be a web based application with a javascript/typescript based interface using *pymoo* to answer requests necessary for plotting or optimization\n",
+    "- **Interactive Visualization:** Our framework provides static visualization for the objective space in higher dimensions. However, it would be nice to make it possible to explore solutions interactively. A suitable choice would be a web-based application with a javascript/typescript based interface using *pymoo* to answer requests necessary for plotting or optimization\n",
     "\n",
-    "- **Other Topcis:** Those are topics that came to our mind. However, there are many more things related to multi-objective optimization that are interesting and standard implementation in a framework would be useful!"
+    "- **Other Topics:** Those are topics that came to our mind. However, there are many more things related to multi-objective optimization that are interesting and standard implementation in a framework would be useful!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you are interested in any of those topics please let us know."
+    "If you are interested in any of those topics, please let us know."
    ]
   }
  ],
