--- a/doc/source/interface/termination.ipynb
+++ b/doc/source/interface/termination.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Whenever an algorithm is executed it needs to be decided whether a next iteration should be started  or not. For single-objective algorithms a naive implementation can consider the relative improvement in the last $n$ generations.\n"
+    "Whenever an algorithm is executed, it needs to be decided whether a next iteration should be started. For single-objective algorithms, a naive implementation can consider the relative improvement in the last $n$ generations."
    ]
   },
   {
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have added recently developed a termination criterion which is set if no termination is supplied to the `minimize()` method:"
+    "We have added recently developed a termination criterion set if no termination is supplied to the `minimize()` method:"
    ]
   },
   {
@@ -73,18 +73,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is allows you to terminated based on a couple of criteria also explained later on this page. \n",
+    "This allows you to terminated based on a couple of criteria also explained later on this page. \n",
     "Commonly used are the movement in the design space `f_tol` and the convergence in the constraint `cv_tol` and objective space `f_tol`.\n",
-    "To provide an upper bound for the algorithm, we also recommend to supply a maximum number of generations `n_max_gen` or function evaluations `n_max_evals`.\n",
+    "To provide an upper bound for the algorithm, we recommend supplying a maximum number of generations `n_max_gen` or function evaluations `n_max_evals`.\n",
     "\n",
-    "Moreover, it is worth mentioning that the tolerance termination is based on a sliding window. Not only the last, but a sequence of the `n_last` generations are used to calculate compare the tolerances with an bound defined by the user."
+    "Moreover, it is worth mentioning that tolerance termination is based on a sliding window. Not only the last, but a sequence of the `n_last` generations are used to calculate compare the tolerances with an bound defined by the user."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default for multi-objective problems the termination will be set to"
+    "By default for multi-objective problems, the termination will be set to"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The termination can simply be reached by providing an upper bound for the number of function evaluations. Whenever, in an iteration the number of function evaluations is larger than this upper bound the algorithm terminates."
+    "The termination can simply be reached by providing an upper bound for the number of function evaluations. Whenever in an iteration, the number of function evaluations is greater than this upper bound the algorithm terminates."
    ]
   },
   {
@@ -279,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The termination can be also based on the time of the algorithm to be executed. For instance, to run an algorithm for 3 seconds the termination can be defined by `get_termination(\"time\", \"00:00:03\")` or for 1 hour and 30 minutes by `get_termination(\"time\", \"01:30:00\")`."
+    "The termination can also be based on the time of the algorithm to be executed. For instance, to run an algorithm for 3 seconds the termination can be defined by `get_termination(\"time\", \"00:00:03\")` or for 1 hour and 30 minutes by `get_termination(\"time\", \"01:30:00\")`."
    ]
   },
   {
@@ -336,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also, we can track the change in the design space. For a parameter explanation please have a look at 'ftol'."
+    "Also, we can track the change in the design space. For a parameter explanation, please have a look at 'ftol'."
    ]
   },
   {
@@ -389,17 +389,17 @@
    "source": [
     "### Objective Space Tolerance ('f_tol')\n",
     "\n",
-    "Probably the most interesting stopping criterion is to use the objective space change to make decision whether to continue or not. Here, we mostly use a naive and efficient procedure to determine whether to stop or not. We aim to improve it further in the future. If somebody in interested in collaborating please let us know.\n",
+    "The most interesting stopping criterion is to use objective space change to decide whether to terminate the algorithm. Here, we mostly use a simple and efficient procedure to determine whether to stop or not. We aim to improve it further in the future. If somebody is interested in collaborating, please let us know.\n",
     "\n",
     "The parameters of our implementation are:\n",
     "\n",
-    "**tol**: What is the tolerance in the objective space in average. If the value is below this bound we terminate.\n",
+    "**tol**: What is the tolerance in the objective space on average. If the value is below this bound, we terminate.\n",
     "\n",
     "**n_last**: To make the criterion more robust, we consider the last $n$ generations and take the maximum. This considers the worst case in a window.\n",
     "\n",
-    "**n_max_gen**: As a fallback the generation number can be used. For some problems the termination criterion might not be reached, however, an upper bound for generations can be defined to stop in that case.\n",
+    "**n_max_gen**: As a fallback, the generation number can be used. For some problems, the termination criterion might not be reached; however, an upper bound for generations can be defined to stop in that case.\n",
     "\n",
-    "**nth_gen**: Defines whenever the termination criterion is calculated. By default, every 10th generation."
+    "**nth_gen**: Defines whenever the termination criterion is calculated by default, every 10th generation."
    ]
   },
   {
@@ -480,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
