--- a/doc/source/misc/reference_directions.ipynb
+++ b/doc/source/misc/reference_directions.ipynb
@@ -36,10 +36,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and, therefore, lie always on the *unit simplex*. \n",
     "\n",
     "So far, most studies have used the Das and Dennis's structured approach <cite data-cite=\"das_dennis\"></cite> for generating  well-spaced reference points. \n",
-    "A reference direction is constructed by a vector originating from the origin and connected to each of these points. The number of points on the unit simplex is determined by a parameter $p$ (we call it `n_partitions` in our implementation), which indicates the number of gaps between two consecutive points along an objective axis. It turns out that the total number of points ($n$) on the unit simplex is"
+    "A reference direction is constructed by a vector originating from the origin and connected to each of them. The number of points on the unit simplex is determined by a parameter $p$ (we call it `n_partitions` in our implementation), which indicates the number of gaps between two consecutive points along an objective axis. It turns out that the total number of points ($n$) on the unit simplex is"
    ]
   },
   {
@@ -51,7 +50,7 @@
     "$$\n",
     "\n",
     "For example, if $p=10$ is chosen for a three-objective problem ($M=3$), then the total number of points on the unit simplex is $C_{10}^{\\, 3+10-1}=\\binom{12}{10}$ or 66. These 66 points are well-spaced with an identical distance to their nearest neighbor on the unit simplex.\n",
-    "Due to the highly structured nature of the procedure, this method cannot produce an arbitrary number of points, which is desired in an EMaO application. Moreover, in higher dimensional space most points to not lie in the interior but on the boundaries. Both is demonstrated in the figure below.\n",
+    "Due to the highly structured nature of the procedure, this method cannot produce an arbitrary number of points desired in an EMaO application. Moreover, in higher dimensional space, most points to not lie in the interior but on the boundaries. Both are demonstrated in the figure below.\n",
     "\n",
     "<div style=\"display: block;margin-left: auto;margin-right: auto;width: 60%;\">\n",
     "![ref_dir_interior](../resources/images/ref_dir_interior.png)\n",
@@ -62,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our framework offers a **novel** Riesz s-Energy <cite data-cite=\"ref_dirs\"></cite> based method which is able to overcome the limitation of the Das and Dennis method and is able to create a well-spaced point set for any arbitrary number of points and dimensions.\n",
+    "Our framework offers a **novel** Riesz s-Energy <cite data-cite=\"ref_dirs\"></cite> based method which can overcome the limitation of the Das and Dennis method and create a well-spaced point set for any arbitrary number of points and dimensions.\n",
     "This method addresses the need of EMO research for a more generic approach to sample reference directions. "
    ]
   },
@@ -92,7 +91,7 @@
     "\\newcommand{\\norm}[1]{\\left\\lVert#1\\right\\rVert}\n",
     "\\end{equation}\n",
     "\n",
-    "The motivation behind the use of an energy concept to obtain a well-spaced distribution comes from nature. Multi-body and interacting physical systems eventually settle on a state which corresponds to the minimum overall  potential energy. For two bodies, the potential energy is proportional to the inverse of the distance between them. The minimum potential solution corresponds to a diverse distribution of multiple bodies in the three-dimensional physical space. \n",
+    "The motivation behind the use of an energy concept to obtain a well-spaced distribution comes from nature. Multi-body and interacting physical systems eventually settle on a state which corresponds to the minimum overall potential energy. For two bodies, the potential energy is proportional to the inverse of the distance between them. The minimum potential solution corresponds to a diverse distribution of multiple bodies in the three-dimensional physical space. \n",
     "While dealing with a many-dimensional ($s$) space, we use a generalization of potential energy called Riesz <cite data-cite=\"HARDIN2005174\"></cite> which is defined between two points ($\\boldz^{(i)}$ and $\\boldz^{(j)}$) as\n",
     "\n",
     "\\begin{equation}\n",
@@ -113,15 +112,16 @@
     "\\end{aligned}\n",
     "\\end{equation}\n",
     "\n",
-    "To make sure all points stay on the unit simplex, gradients are projected onto the unit simplex. \n"
+    "To make sure all points stay on the unit simplex, gradients are projected onto the unit simplex. \n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The proposed s-Energy method is so far exclusively available in our framework and was the outcome of research project in our lab. We are driven by providing our newest algorithms and methods to other researchers.\n",
-    "If you use our method to create reference directions please cite our method as:"
+    "The proposed s-Energy method is exclusively available in our framework and was the outcome of a research project in our laboratory. We are driven by providing our newest algorithms and methods to other researchers.\n",
+    "If you use our method to create reference directions, please cite our method as:"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As mentioned in the introduction, Das-Dennis method can be used to create reference direction in a very structured way. \n",
+    "As mentioned in the introduction, the Das-Dennis method can be used to create reference directions in a very structured way. \n",
     "However, the method relies on a partition number `n_partitions` which determines how many points will be sampled.\n",
     "Points can be uniformly create on the unit simplex using the Das-Dennis method proposed in <cite data-cite=\"das_dennis\"></cite>."
    ]
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By carefully observing the figure above one can see that along one axis exactly 12 partitions (which results in 13 points including the corners) exist. However, this implies when the dimensionality increases more and more points will be sampled a) on the boundaries and b) on the overall simplex. "
+    "By carefully observing the figure above, one can see that along one axis, exactly 12 partitions (which results in 13 points, including the corners) exist. However, this implies that when the dimensionality increases, more points will be sampled a) on the boundaries and b) on the overall simplex. "
    ]
   },
   {
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now one can argue the decreasing the partition number might be a solution to address the exploding number of points in higher dimensions. However, please keep in mind that only very few points might then lie in the interior of the simplex. Calculations reveal that, when $p<M$, there is no interior point, and when $p=M$, there is exactly one interior point, irrespective of the size of $M$. With $p>M$  points begin to appear in the interior, but the number of such interior points is $n_I = {{p-1}\\choose{p-M}}$, which is only a tiny fraction\n",
+    "One can argue that decreasing the partition number might be a solution to address the exploding number of points in higher dimensions. However, please keep in mind that only very few points might lie in the simplex interior. Calculations reveal that, when $p<M$, there is no interior point, and when $p=M$, there is exactly one interior point, irrespective of the size of $M$. With $p>M$  points begin to appear in the interior, but the number of such interior points is $n_I = {{p-1}\\choose{p-M}}$, which is only a tiny fraction\n",
     "\\begin{equation}\n",
     "\\rho_I = \\frac{n_I}{n} = \\frac{p! \\, (p-1)!}{(p-M)! \\, (M+p-1)!}\n",
     "\\end{equation}\n",
@@ -268,8 +268,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This approach uses the idea of scaling different simplices. This basically requires the user to define different layers including the dimensionality `n_dim`, the partition number `n_partitions` and the corresponding scaling `scaling`.\n",
-    "For instance, for three dimensions a bias towards the center can be achieved as follows:"
+    "This approach uses the idea of scaling different simplices. This requires the user to define different layers, including the dimensionality `n_dim`, the partition number `n_partitions`, and the corresponding scaling `scaling`.\n",
+    "For instance, for three dimensions, a bias towards the center can be achieved as follows:"
    ]
   },
   {
@@ -332,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To retrieve the optimized partitions the `LayerwiseRieszEnergyReferenceDirectionFactory` can be used instead of the convenience method."
+    "The `LayerwiseRieszEnergyReferenceDirectionFactory` can be used to retrieve the optimized partitions instead of the convenience method."
    ]
   },
   {
@@ -387,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
