--- a/doc/source/operators/sampling.ipynb
+++ b/doc/source/operators/sampling.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the very beginning initial points needs to be sampled. *pymoo* offers different sampling methods depending on the variable type."
+    "In the beginning, initial points need to be sampled. *pymoo* offers different sampling methods depending on the variable type."
    ]
   },
   {
@@ -159,9 +159,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
