--- a/doc/source/versions.ipynb
+++ b/doc/source/versions.ipynb
@@ -36,9 +36,9 @@
     "- New Loop-wise Execution: The algorithm object can be used directly by calling its next method\n",
     "- New Tutorial: An implementation of checkpoints to resume runs\n",
     "- New Test Problems Suites (Constrained): DAS-CMOP and MW (contributed by cyrilpic)\n",
-    "- New Operators for Permutations: OrderCrossover and InversionMutation and a usage to optimize routes for the TSP and Flowshop problem (contributed by Peng-YM )\n",
+    "- New Operators for Permutations: OrderCrossover and InversionMutation and usage to optimize routes for the TSP and Flowshop problem (contributed by Peng-YM )\n",
     "- New Crossover: Parent Centric Crossover (PCX) which is known to work well on problems where some variables have dependencies on each other\n",
-    "- Bugfix: Remove evaluate calls in Problem class during print"
+    "- Bugfix: Remove evaluation calls in Problem class during print"
    ]
   },
   {
@@ -225,10 +225,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
