--- a/doc/source/visualization/pcp.ipynb
+++ b/doc/source/visualization/pcp.ipynb
@@ -21,9 +21,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For higher dimensional data Parallel Coordinate Plots are a powerful tool to analyze how dense solutions are distributed in different ranges regarding each coordinate.\n",
+    "For higher-dimensional data, Parallel Coordinate Plots are a powerful technique to analyze how dense solutions are distributed in different ranges regarding each coordinate.\n",
     "\n",
-    "Let us create some data for the purpose of visualization:"
+    "Let us create some data for visualization:"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the Pareto-front for the DTLZ1 test problem with 6 objectives with some scale added. We add a different scaling to show the effect of normalization later on. Let us assume our algorithm converged after a number of generation and this is the result set."
+    "This is the Pareto-front for the DTLZ1 test problem with six objectives, with some scale added. We add a different scaling to show the effect of normalization later on. Let us assume our algorithm converged after some generations, and this is the result set."
    ]
   },
   {
@@ -66,7 +66,7 @@
    "metadata": {},
    "source": [
     "This gives an idea of the overall result set. \n",
-    "Let us assume we identified solution 50 and 75 to more of interesest and like to highlight them in our plot:"
+    "Let us assume we identified solution 50 and 75 to more of interest and like to highlight them in our plot:"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please note, that the PCP object just is a wrapper around a matplotlib figure. All options that apply for plotting the corresponding type (here line, but can also be scatter, polygon, ...) can be used, such as linde width, color and alpha."
+    "Please note that the PCP object just is a wrapper around a matplotlib figure. All options that apply for plotting the corresponding type (here `plot`, but it can also be `scatter`, `polygon`, ...) can be used, such as `linewidth`, `color` or `alpha`."
    ]
   },
   {
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Moreover, if the boundaries should be set manually, this can be achieved by turning the default normalization of and providing them. Either directly as a numpy array or just an integer to be set for all axes."
+    "Moreover, if the boundaries should be set manually, this can be achieved by turning the default normalization of and providing them. Either directly as a NumPy array or just an integer to be set for all axes."
    ]
   },
   {
@@ -235,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
